--- a/newaccount.html
+++ b/newaccount.html
@@ -7,6 +7,11 @@
     <title>Nguyen Van Viet</title>
     <link rel="stylesheet" href="day1.css" />
   </head>
+<Style>
+  .main{
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  }
+</Style>
   <body>
     <div class="main">
       <div class="main-title">
@@ -23,6 +28,6 @@
       </div>
     </div>
   </body>
-  <script src="Day1.js"></script>
+  <script src="account.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </html>
