--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
         <div class="menu">
           <ul class="menu-ul">
             <li class="menu-li">
-              <a href="" class="menu__heading">
+              <a href="home.html" class="menu__heading">
                 <div class="mennu__heading-icon">
                   <i class="fa-brands fa-shopify"></i>
                 </div>
@@ -42,7 +42,7 @@
               </a>
             </li>
             <li class="menu-li">
-              <a href="" class="menu__heading">
+              <a href="log.html" class="menu__heading">
                 <div class="mennu__heading-icon">
                   <i class="fa-regular fa-clock"></i>
                 </div>
@@ -58,7 +58,11 @@
               </a>
             </li>
             <li class="menu-btn">
-              <button class="btn_menu-li">Logout</button>
+              <button class="btn_menu-li" onclick="Logout()">Logout</button>
+            </li>
+            <li class="dff">
+              <button onclick="black()" class="black">black</button>
+              <button onclick="white()" class="white">White</button>
             </li>
           </ul>
         </div>
@@ -69,28 +73,45 @@
               <thead>
                 <tr>
                   <th scope="col" class="talileft">#</th>
-                  <th scope="col" class="talicenter">First</th>
-                  <th scope="col" class="talicenter">Last</th>
-                  <th scope="col" class="talicenter">Last</th>
-                  <th scope="col" class="taliright">Handle</th>
+                  <th scope="col" class="talicenter">Device</th>
+                  <th scope="col" class="talicenter">Hãng</th>
+                  <th scope="col" class="talicenter">ip</th>
+                  <th scope="col" class="talicenter">Date</th>
+                  <th scope="col" class="taliright">soluong</th>
                 </tr>
               </thead>
-              <tbody class="table-roww">
-                <tr>
-                  <th scope="row">1</th>
-                  <td class="talicenter">Mark</td>
-                  <td class="talicenter">Mark</td>
-                  <td class="talicenter">Otto</td>
-                  <td class="taliright">@mdo</td>
-                </tr>
-              </tbody>
+              <tbody class="table-roww"></tbody>
             </table>
+            <div class="app-main-chart">
+              <div class="chart">
+                <canvas id="myChart" class="abccc"></canvas>
+              </div>
+              <div class="addchart">
+                <input type="text" placeholder="name" class="chartname" />
+                <input
+                  type="text"
+                  placeholder="số Lượng"
+                  class="chartsoluong"
+                />
+                <button class="btn-device" onclick="adddevice()">
+                  Add Device
+                </button>
+              </div>
+            </div>
           </div>
         </div>
+        <div class="home-2"></div>
       </div>
     </div>
   </body>
-  <script src="Day1.js"></script>
+
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"
+    integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+    crossorigin="anonymous"
+  ></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
     integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
@@ -102,10 +123,7 @@
     integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
     crossorigin="anonymous"
   ></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"
-    integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
-    crossorigin="anonymous"
-  ></script>
+  <script src="chart.js"></script>
+  <script src="account.js"></script>
+  <script src="homesp.js"></script>
 </html>
